2006-08-16 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/newcmd.cc, sim/ucsim/cmd.src/newcmdcl.h,
	  sim/ucsim/cmd.src/cmdutil.cc, sim/ucsim/cmd.src/cmdutil.h,
	  sim/ucsim/sim.src/mem.cc, sim/ucsim/sim.src/uc.cc: code cleaning

2006-08-14 Borut Razem <borut.razem AT siol.net>

	* support/regression/Makefile.in,
	  support/regression/ports/pic14/gpsim.cmd,
	  support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic14/support.c:
	  added pic14 regression test

2006-08-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/doc/asxhtm.html: documented changed ABS behaviour
	* as/doc/README: fixed some typos

2006-08-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/float_trans.c: disabled test if __STDC_IEC_559__
	  not defined on host

2006-08-12 Borut Razem <borut.razem AT siol.net>

	* support/regression/fwk/include/testfwk.h,
	  support/regression/fwk/lib/testfwk.c,
	  support/regression/generate-cases.py,
	  support/regression/Makefile.in:
	  regression test framework does not depend on function pointers and
	  variable arguments

2006-08-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/stddef.h: c temporary hack to fix bug 1518273

2006-08-09 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/cc2510fx.h: added
	* src/z80/z80.dsp, src/gbz80/gbz80.dsp: added support/Util/strcmpi.ch
	  to projects.

2006-08-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/z80/assym.c (mlookup): ignore case when looking up mnemonics
	* as/z80/Makefile.in: added strcmpi.c
	* as/z80/z80adr.c: added upper case registers and lower case conditionals
	* support/Util/strcmpi.ch: added with intention to remove from mcs51/hc08

2006-08-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/gbz80/asm_strings.s,
	* device/lib/gbz80/crt0_rle.s,
	* device/lib/gbz80/div.s,
	* device/lib/gbz80/mul.s,
	* device/lib/gbz80/shift.s,
	* device/lib/z80/asm_strings.s,
	* device/lib/z80/crt0_rle.s,